--- a/app/views/alumnos_personas_vinculadas/consultar.html.erb
+++ b/app/views/alumnos_personas_vinculadas/consultar.html.erb
@@ -58,8 +58,13 @@
               <p>
                 <%= image_tag(alumno_persona_vinculada.alumno.foto) %> <br/>
                 <%= alumno_persona_vinculada.alumno.apellidos_nombres %> <br/>
+                
                 <% if alumno_persona_vinculada.alumno.salida_registrada(alumno_persona_vinculada.alumno.id, Date.current) == 0 %>
-                  <%= check_box_tag 'alumno_id[]',alumno_persona_vinculada.alumno.id %> 
+                  <% if can? :crear_en_bloque, Asistencia %>
+                    <%= check_box_tag 'alumno_id[]',alumno_persona_vinculada.alumno.id %> 
+                  <% else %>
+                    [ ]
+                  <% end %>
                 <% else %>
                 <div style="color: #00f; font-size: 11px;">
                   Recogido por <%= alumno_persona_vinculada.alumno.find_asistencia_by_alumno_id_and_fecha(alumno_persona_vinculada.alumno.id, Date.current.strftime('%d/%m/%Y')).persona_vinculada.apellidos_nombres %><br/>
@@ -72,9 +77,11 @@
             
             <%= hidden_field_tag 'persona_vinculada_id', persona.id %>
             
-            <div>
-              <%= submit_tag "Registrar salida", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
-            </div>
+            <% if can? :crear_en_bloque, Asistencia %>
+              <div>
+                <%= submit_tag "Registrar salida", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
+              </div>
+            <% end %>
           </div>
         <% end %>
       </div>
