--- a/app/views/alumnos/index.html.erb
+++ b/app/views/alumnos/index.html.erb
@@ -1,9 +1,23 @@
 <div data-role="header">
   <h1>Alumnos</h1>
 </div>
+<% if !params[:seccion_id].nil? %>  
+  <% seccion = params[:seccion_id] %>
+<% end %>
 
 <div data-role="content" class="content-primary">
-  
+  <%= form_tag(alumnos_path, {:method => :get, "data-ajax" => "false"}) do %>
+    <div style="float: left">
+      <%= simple_format("Sección:") %>
+    </div>
+    <div style="width: 160px; clear: left; float: left">
+      <%= collection_select(:seccion, :id, Seccion.all, :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
+    </div>
+    <div style="float: left">  
+      <%= submit_tag "", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", "data-iconpos" => "notext", :name => nil %>
+    </div>
+  <% end %>
+
   <ul data-role="listview" data-filter="true">
     <% @alumnos.each do |alumno| %>
     <li data-filtertext="<%= alumno.apellidos_nombres %>" >
