cancan en vistas

--- a/app/views/actividades/index.html.erb
+++ b/app/views/actividades/index.html.erb
@@ -1,6 +1,8 @@
 <div data-role="header">
   <h1>Actividades</h1>
-  <%= link_to 'Registrar', new_actividad_path, "data-icon" => "plus", "class" => "ui-btn-right" %>
+  <% if can? :create, Actividad %>
+    <%= link_to 'Registrar', new_actividad_path, "data-icon" => "plus", "class" => "ui-btn-right" %>
+  <% end  %>
 </div>
 
 <div data-role="content" class="ui-content" role="main">
@@ -15,7 +17,10 @@
             <%= link_to edit_actividad_path(actividad) do %>
               <%= "#{actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{TipoEvento.find(actividad.tipo_evento_id).descripcion} -  #{actividad.nombre}" %> 
             <% end %>
-            <%= link_to 'Eliminar', actividad, confirm: '¿Seguro que desea eliminar el registro?', method: :delete, "data-icon" => "delete" %>
+            
+            <% if can? :destroy, Actividad %>
+              <%= link_to 'Eliminar', actividad, confirm: '¿Seguro que desea eliminar el registro?', method: :delete, "data-icon" => "delete" %>
+            <% end  %>
           </li>
         <% end  %>
       </ul>
