--- a/app/views/perfiles/show.html.erb
+++ b/app/views/perfiles/show.html.erb
@@ -19,7 +19,7 @@
     <li>
       <%= link_to simple_format(perfil_permiso.detalle), [@perfil, perfil_permiso] %>
       
-      <% if can? :destroy, PerfilPermiso %>
+      <% if can? :destroy, perfil_permiso %>
         <%= link_to 'Eliminar vínculo', [perfil_permiso.perfil, perfil_permiso], confirm: '¿Seguro que desea eliminar el vínculo?', method: :delete, "data-icon" => "delete" %>
       <% end %>
       
