--- a/app/views/asistencias/new.html.erb
+++ b/app/views/asistencias/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New asistencia</h1>
+<div data-role="header">
+  <h1>Registrar asistencia</h1>
+</div>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', asistencias_path %>
+<!-- %= link_to 'Back', asistencias_path %-->
