--- a/app/views/menus/main.html.erb
+++ b/app/views/menus/main.html.erb
@@ -49,7 +49,7 @@
         <% end %>
 
         <% if can? :create, Asistencia %>
-          <li><a href="<%= marcacion_path %>">Registrar asistencia de alumnos</a></li>
+          <li><a href="<%= new_asistencia_path %>">Registrar asistencia de alumnos</a></li>
         <% end %>
       <% end %>
 
