--- a/public/landingpage.css
+++ b/public/landingpage.css
@@ -3467,7 +3467,7 @@ body {
     margin: 0 auto 20px; }
 
 a:link, a:visited {
-  color: #06c;
+  color: #369;
   text-decoration: none; }
 a:hover {
   text-decoration: underline; }
@@ -3476,7 +3476,7 @@ section, article, header, footer, nav, aside, hgroup {
   display: block; }
 
 nav {
-  padding: 20px 30px 10px;
+  padding: 5px 30px 5px;
   border-bottom: 1px solid #d4cdc1;
   position: relative; }
   nav > a {
@@ -3487,7 +3487,7 @@ nav {
       text-indent: -9000px;
       height: 55px;
       width: 194px;
-      background: url("logo.jpg") no-repeat center top;
+      background: url("/assets/logo_small2.gif") no-repeat center top;
       background-size: 194px 55px; }
   nav > ul {
     float: right;
@@ -3505,12 +3505,14 @@ nav {
         nav > ul li.signin a {
           display: block;
           color: #fff;
-          background-color: #000;
+          background-color: #369;
           padding: 8px 14px 9px 14px;
-          margin: 0 0 0 10px; }
+          margin: 0 0 0 10px;
+          border-radius: 15px;}
           nav > ul li.signin a:hover {
             text-decoration: none;
-            background-color: #444; }
+            background-color: #00008b;
+            box-shadow: 0px 0px 5px 0px #1E90FF;}
       nav > ul li strong {
         font-size: 16px; }
   nav li.links {
@@ -3532,3 +3534,152 @@ footer {
   nav > a.logo {
     background: url("/assets/images/logo2x.png") no-repeat center top;
     background-size: 194px 55px; } }
+
+
+
+.button, .button span {
+   display: inline-block;
+   -webkit-border-radius: 4px;
+   -moz-border-radius: 4px;
+   border-radius: 4px;
+}
+.button {
+   white-space: nowrap;
+   line-height:1em;
+   position:relative;
+   outline: none;
+   overflow: visible; 
+   cursor: pointer;
+   border: 1px solid #999;
+border: rgba(0, 0, 0, .2) 1px solid;
+   border-bottom:rgba(0, 0, 0, .4) 1px solid;
+   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);
+   -moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);
+   box-shadow: 0 1px 2px rgba(0,0,0,.2);
+   background: -moz-linear-gradient(
+      center top,
+      rgba(255, 255, 255, .1) 0%,
+      rgba(0, 0, 0, .1) 100%
+   );
+   background: -webkit-gradient(
+      linear,
+      center bottom,
+      center top,
+      from(rgba(0, 0, 0, .1)),
+      to(rgba(255, 255, 255, .1))
+   );
+   -moz-user-select: none;
+   -webkit-user-select:none;
+   -khtml-user-select: none;
+   user-select: none;
+   margin-bottom:10px;
+}
+.button.full, .button.full span {
+   display: block;
+}
+.button:hover, .button.hover {
+   background: -moz-linear-gradient(
+      center top,
+      rgba(255, 255, 255, .2) 0%,
+      rgba(255, 255, 255, .1) 100%
+   );
+   background: -webkit-gradient(
+      linear,
+      center bottom,
+      center top,
+      from(rgba(255, 255, 255, .1)),
+      to(rgba(255, 255, 255, .2))
+   );
+}
+.button:active, .button.active {
+   top:1px;
+}
+.button span {
+   position: relative;
+   color:#fff;
+   text-shadow:0 1px 1px rgba(0, 0, 0, 0.25);
+   border-top: rgba(255, 255, 255, .2) 1px solid;
+   padding:0.6em 1.3em;
+   line-height:1em;
+   text-align:center;
+   white-space: nowrap;
+}
+
+.button.pequeno span {
+   font-size:12px;
+}
+.button.mediano span {
+   font-size:16px;
+}
+.button.grande span {
+   font-size:22px;
+}
+
+.button.rojo {
+   background-color: #e62727;
+}
+.button.naranja {
+   background-color: #ff5c00;
+}
+
+.button.azul {
+   background-color: #00ADEE;
+}
+
+A.button.azuloscuro {
+   background-color: #369;
+}
+
+{
+   color: #0000cc;
+   text-decoration: none;
+}
+
+
+
+#blanket {
+background-color:#111;
+opacity: 0.65;
+background:none;
+position:absolute;
+z-index: 9001;
+top:0px;
+left:0px;
+width:100%;
+}
+
+#videoControl {
+    position:absolute;
+    background:url(pop-back.jpg) no-repeat;
+    width:400px;
+    height:400px;
+    border:5px solid #000;
+    z-index: 9002;
+}
+
+#videoEventos {
+    position:absolute;
+    background:url(pop-back.jpg) no-repeat;
+    width:400px;
+    height:400px;
+    border:5px solid #000;
+    z-index: 9002;
+}
+
+#videoNotificaciones {
+    position:absolute;
+    background:url(pop-back.jpg) no-repeat;
+    width:400px;
+    height:400px;
+    border:5px solid #000;
+    z-index: 9002;
+}
+
+#videoSeguridad {
+    position:absolute;
+    background:url(pop-back.jpg) no-repeat;
+    width:400px;
+    height:400px;
+    border:5px solid #000;
+    z-index: 9002;
+}
