--- a/public/landingpage.css
+++ b/public/landingpage.css
@@ -640,6 +640,25 @@ body.extras section.links {
     background: url("/assets/images/extras/yoxel-x2.png") no-repeat; }
   body.extras section.apps article a.lodge {
     background: url("/assets/images/extras/lodge-x2.png") no-repeat; } }
+
+th {
+    border-color: #CCC; 
+    border-style: solid; 
+    border-width: 1px;
+    height: 30px;
+    font-weight: bold;
+    font-size: 16px;
+    color: #369;
+}
+  
+td {
+    border-color: #CCC; 
+    border-style: solid; 
+    border-width: 1px;
+    height: 22px;
+}
+
+
 /*
  * FancyBox - jQuery Plugin
  * Simple and fancy lightbox alternative
