--- a/app/views/asistencias/consultar.html.erb
+++ b/app/views/asistencias/consultar.html.erb
@@ -13,9 +13,9 @@
 <% end %>
 
 <div data-role="content">
-  <%= form_tag(asistencias_path, {"onSubmit" => "return validarBusquedaXRangoFechas();", "data-ajax" => "false", "name" => "buscar", :method => :get}) do %>
+  <%= form_tag(consulta_asistencia_path, {"onSubmit" => "return validarBusquedaXRangoFechas();", "data-ajax" => "false", "name" => "buscar", :method => :get}) do %>
     <div data-role="fieldcontain">
-      Del: <%= text_field_tag(:fechaI, fechaI, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:120px") %><br />
+      Del: <%= text_field_tag(:fechaI, fechaI, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:120px") %>
       Al: <%= text_field_tag(:fechaF, fechaF, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:120px") %><br />
       Sección: <%= collection_select(:seccion, :id, Seccion.all, :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
       <%= submit_tag "Buscar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", :name => nil %>
@@ -24,12 +24,11 @@
   
   <ul data-role="listview" data-filter="true">
     <% @asistencias.each do |asistencia| %>
-    <li data-filtertext="<%= "#{asistencia.anio_alumno.alumno.apellidos_nombres} #{asistencia.persona_vinculada.apellidos_nombres}" %>" >
+    <li data-filtertext="<%= "#{asistencia.anio_alumno.alumno.apellidos_nombres} " %>" >
       <%= link_to "#" do %>
         <!--strong></strong>PM -->
         <p class="ui-li-aside ui-li-desc"><%= asistencia.hora%> </p>
         <p class="ui-li-heading"> <%= simple_format("#{asistencia.anio_alumno.alumno.apellidos_nombres}") %> </p>
-        <p class="ui-li-heading"> <%= simple_format("Persona autorizada: #{asistencia.persona_vinculada.apellidos_nombres}") %> </p>
       <% end %> 
     </li>
     <% end %>
