consulta asistencia y mant. tipos evento

--- a/app/views/tipos_eventos/edit.html.erb
+++ b/app/views/tipos_eventos/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing tipo_evento</h1>
+<div data-role="header">
+    <h1>Editar tipo de evento</h1>
+    <%= link_to 'Regresar', tipos_eventos_path, "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @tipo_evento %> |
-<%= link_to 'Back', tipos_eventos_path %>
