--- a/app/views/asistencias/consultar.html.erb
+++ b/app/views/asistencias/consultar.html.erb
@@ -6,30 +6,49 @@
   <% seccion = "" %>
   <% fechaI = "" %>
   <% fechaF = "" %>
+  <% tipo_movimiento = "" %>
 <% else %>
   <% seccion = params[:seccion_id] %>
   <% fechaI = params[:fechaI] %>
   <% fechaF = params[:fechaF] %>
+  <% tipo_movimiento = params[:tipo_movimento] %>
 <% end %>
 
 <div data-role="content">
   <%= form_tag(consulta_asistencia_path, {"onSubmit" => "return validarBusquedaXRangoFechas();", "data-ajax" => "false", "name" => "buscar", :method => :get}) do %>
     <div data-role="fieldcontain">
-      Del: <%= text_field_tag(:fechaI, fechaI, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:120px") %>
-      Al: <%= text_field_tag(:fechaF, fechaF, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:120px") %><br />
-      Sección: <%= collection_select(:seccion, :id, Seccion.all, :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
+      Del: <%= text_field_tag(:fechaI, fechaI, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:135px") %>
+      Al: <%= text_field_tag(:fechaF, fechaF, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:135px") %>
+      <li data-role="fieldcontain">
+        Sección: <%= collection_select(:seccion, :id, Seccion.all, :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
+      </li>
+      <li data-role="fieldcontain">
+        Movimiento: <%= collection_select(:tipo_movimiento, tipo_movimiento, ListaValor.where("tabla=7"), :item, :descripcion, {:prompt => ':: Seleccione ::', :selected => :tipo_movimiento}, {"data-mini" => "true"}) %>
+      </li>
+    <li data-role="fieldcontain">
       <%= submit_tag "Buscar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", :name => nil %>
+      </li>
     </div>
   <% end %>
   
   <ul data-role="listview" data-filter="true">
+    <% fechaproc = "" %>
     <% @asistencias.each do |asistencia| %>
-    <li data-filtertext="<%= "#{asistencia.anio_alumno.alumno.apellidos_nombres} " %>" >
-      <%= link_to "#" do %>
+        <% if fechaproc < asistencia.fecha_hora.strftime('%Y%m%d') %>
+          <% fechaproc = asistencia.fecha_hora.strftime('%Y%m%d') %>
+          <li data-role="list-divider" >
+            <%= asistencia.fecha %>
+          </li>
+        <% end %>
+        <li data-filtertext="<%= "#{asistencia.anio_alumno.alumno.apellidos_nombres} " %>" >
         <!--strong></strong>PM -->
-        <p class="ui-li-aside ui-li-desc"><%= asistencia.hora%> </p>
         <p class="ui-li-heading"> <%= simple_format("#{asistencia.anio_alumno.alumno.apellidos_nombres}") %> </p>
-      <% end %> 
+        <p class="ui-li-aside ui-li-desc">
+            <% if asistencia.tipo_movimiento== 1 %> Ingreso: <% else %> Salida: <% end %>
+            <%= asistencia.hora%>
+        </p>
+        <!-- %= link_to "#" do % -->
+        <!--% end %--> 
     </li>
     <% end %>
   </ul>
