--- a/app/views/asistencias/index.html.erb
+++ b/app/views/asistencias/index.html.erb
@@ -15,7 +15,7 @@
 <div data-role="content">
   <%= form_tag(asistencias_path, {"onSubmit" => "return validarBusquedaXFecha();", "data-ajax" => "false", "name" => "buscar", :method => :get}) do %>
     <div data-role="fieldcontain">
-      Fecha: <%= text_field_tag(:fecha, fecha, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:120px") %><br />
+      Fecha: <%= text_field_tag(:fecha, fecha, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:140px") %><br />
       Sección: <%= collection_select(:seccion, :id, Seccion.all, :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
       <%= submit_tag "Buscar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", :name => nil %>
     </div>
@@ -26,11 +26,11 @@
       <!--%= simple_format(titulo) %-->
     <!--/div-->
     <% @asistencias.each do |asistencia| %>
-    <li data-filtertext="<%= "#{asistencia.anio_alumno.alumno.apellidos_nombres} #{asistencia.persona_vinculada.apellidos_nombres}" %>" >
+    <li data-filtertext="<%= "#{Alumno.find(asistencia.anio_alumno.alumno_id).apellidos_nombres} #{asistencia.persona_vinculada.apellidos_nombres}" %>" >
       <%= link_to "#" do %>
         <!--strong></strong>PM -->
         <p class="ui-li-aside ui-li-desc"><%= asistencia.hora%> </p>
-        <p class="ui-li-heading"> <%= simple_format("#{asistencia.anio_alumno.alumno.apellidos_nombres}") %> </p>
+        <p class="ui-li-heading"> <%= simple_format("#{Alumno.find(asistencia.anio_alumno.alumno_id).apellidos_nombres}") %> </p>
         <p class="ui-li-heading"> <%= simple_format("Persona autorizada: #{asistencia.persona_vinculada.apellidos_nombres}") %> </p>
       <% end %> 
     </li>
