--- a/app/views/tipos_eventos/_form.html.erb
+++ b/app/views/tipos_eventos/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@tipo_evento) do |f| %>
   <% if @tipo_evento.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@tipo_evento.errors.count, "error") %> prohibited this tipo_evento from being saved:</h2>
+    <div id="error_explanation" data-role="header" data-theme="e">
+      <h2><%= pluralize(@tipo_evento.errors.count, "error") %> impidieron que se grabe el registro:</h2>
 
       <ul>
       <% @tipo_evento.errors.full_messages.each do |msg| %>
@@ -11,31 +11,39 @@
     </div>
   <% end %>
 
+<div data-role="fieldcontain">
   <div class="field">
-    <%= f.label :colegio_id %><br />
-    <%= f.number_field :colegio_id %>
+    <%= f.hidden_field :colegio_id, :value => "1" %>
   </div>
-  <div class="field">
+ <div class="field">
     <%= f.label :descripcion %><br />
     <%= f.text_field :descripcion %>
   </div>
-  <div class="field">
-    <%= f.label :notificacion_inmediata %><br />
-    <%= f.text_field :notificacion_inmediata %>
+
+  <div data-role="fieldcontain">
+    Notificacion inmediata:<br />
+    <select <%= f.number_field :notificacion_inmediata, "data-role" => "slider", "data-mini" => "true" %> >
+                <option value = 0 <% if @tipo_evento.notificacion_inmediata == 0 %> selected <%end%> >No</option>
+                <option value = 1 <% if @tipo_evento.notificacion_inmediata == 1 %> selected <%end%> >Si</option>
+    </select>
   </div>
   <div class="field">
-    <%= f.label :alcance %><br />
-    <%= f.number_field :alcance %>
+    <%= f.label :alcance, "for" => "name" %><br />
+    <%= collection_select(:tipo_evento, :alcance, ListaValor.where("tabla=1"), :item, :descripcion, {:prompt => ':: Seleccione ::'}, {"data-mini" => "true"}) %>
+  </div>
+  <div data-role="fieldcontain">
+    En cuaderno de control:<br />
+    <select <%= f.number_field :cuaderno_control, "data-role" => "slider", "data-mini" => "true" %> >
+                <option value = 0 <% if @tipo_evento.cuaderno_control == 0 %> selected <%end%> >No</option>
+                <option value = 1 <% if @tipo_evento.cuaderno_control == 1 %> selected <%end%> >Si</option>
+    </select>
   </div>
   <div class="field">
-    <%= f.label :cuaderno_control %><br />
-    <%= f.text_field :cuaderno_control %>
+    <%= f.hidden_field :usuario, :value => current_user.usuario %>
   </div>
-  <div class="field">
-    <%= f.label :usuario %><br />
-    <%= f.text_field :usuario %>
-  </div>
+    
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Grabar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
   </div>
+</div>
 <% end %>
