--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -107,6 +107,8 @@
                             <ul class="submenu">
                                 <li><%= link_to "Archivos cargados", :controller => "archivos", :action => "listar_archivos", :class => "active" %></li>
                                 <li><%= link_to "Subir archivo", :controller => "archivos", :action => "subir_archivos" %> </li>
+                                <li><%= link_to "Cargar alumnos", :controller => "archivos", :action => "cargar_alumnos" %> </li>
+                                <li><%= link_to "Cargar padres", :controller => "archivos", :action => "cargar_padres" %> </li>
                             </ul>
                         </li>
                         <li><a class="menuitem">Menu 2</a>
