--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -109,6 +109,7 @@
                                 <li><%= link_to "Subir archivo", :controller => "archivos", :action => "subir_archivos" %> </li>
                                 <li><%= link_to "Cargar alumnos", :controller => "archivos", :action => "cargar_alumnos" %> </li>
                                 <li><%= link_to "Cargar padres", :controller => "archivos", :action => "cargar_padres" %> </li>
+                                <li><%= link_to "Cargar vínculos", :controller => "archivos", :action => "cargar_vinculos" %> </li>
                             </ul>
                         </li>
                         <li><a class="menuitem">Menu 2</a>
